--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>https://ClaudiaJKang.github.io</title><link rel="canonical" href="https://ClaudiaJKang.github.io"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://ClaudiaJKang.github.io" /></head></html>
+<!DOCTYPE html><html><head><title>https://claudiajkang.com</title><link rel="canonical" href="https://claudiajkang.com"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://claudiajkang.com" /></head></html>
